--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,8 @@
 
 {% include css/font-awesome.min.css %}
 
+{% include map-plugins/node_modules/simple-lightbox/dist/simpleLightbox.min.css %}
+
 // Example Defaults
 //$base-font-family: Lato, Helvetica, Arial, sans-serif;
 // $base-font-size:   16px;
