--- a/_includes/1-head.html
+++ b/_includes/1-head.html
@@ -34,4 +34,7 @@
   {% endif %}
   {% if page.css %}{{page.css}}{% endif %}
   </style>
+  {% if page.permalink == "/mapzen/" %}
+  <link rel="stylesheet" href="https://mapzen.com/js/mapzen.css">
+  {% endif %}
 </head>
