--- a/_includes/1-head.html
+++ b/_includes/1-head.html
@@ -26,7 +26,7 @@
   <link href="/assets/css/main.css" rel="stylesheet" />
   <style>
   {% if page.homepage == true %}{% else %}
-  @media (min-width: 768px) {header{min-height: 33%;} header .header-content {height: 40vh;}}
+  /*@media (min-width: 768px) {header{min-height: 33%;} header .header-content {height: 40vh;}}*/
   {% endif %}
   </style>
   <style>
@@ -37,4 +37,5 @@
   {% if page.permalink == "/mapzen/" %}
   <link rel="stylesheet" href="https://mapzen.com/js/mapzen.css">
   {% endif %}
+  <!--{{page.layout}}-->
 </head>
