--- a/_includes/4.5-trails.sidebar.html
+++ b/_includes/4.5-trails.sidebar.html
@@ -1,5 +1,5 @@
 
-      <div id="sidebar" class="col-xs-6 col-sm-2 col-md-2 sidebar-offcanvas" style="border-left:solid thin lightgray;background:white;">
+      <div id="sidebar" class="col-xs-6 col-sm-2 col-md-2 sidebar-offcanvas" style="border-left:solid thin lightgray;background:white;height:100%;">
         <ul style="list-style:none;">
           <h4 class="text-muted">Bikeways</h4>
           {% for trail in sorted_trails %}
