--- a/assets/css/maps.css
+++ b/assets/css/maps.css
@@ -147,7 +147,11 @@ layout: compress
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
 /*Easy button tweaks*/
-.easy-button-button.leaflet-bar-part.leaflet-interactive {
+.fa-2x {
+  font-size: 2rem;
+  margin-top: 3px;
+}
+.leaflet-left .easy-button-button.leaflet-bar-part.leaflet-interactive {
   padding:2px;
 }
 
@@ -158,17 +162,18 @@ layout: compress
 }
 
 @media screen and (max-width: 480px) {
-  .leaflet-bar.easy-button-container.leaflet-control {
+  .leaflet-left .leaflet-bar.easy-button-container.leaflet-control {
     display: flex;
+    padding: 8px 0;
     justify-content: space-around;
     background: white;
     border-radius: 0;
     border: none;
     margin: 0;
     width: 100%;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 -3px 3px 0 rgba(0, 0, 0, .15);
   }
-  .leaflet-bar.easy-button-container.leaflet-control button {
+  .leaflet-left .leaflet-bar.easy-button-container.leaflet-control button {
     border: none;
     min-width: 80px;
   }
@@ -184,7 +189,7 @@ layout: compress
     margin-top: 30px;
   }*/
  .leaflet-control-attribution {
-    margin-bottom: 30px!important;
+    margin-bottom: 50px!important;
   }
   .leaflet-left,
   .leaflet-right {
