--- a/_includes/2-nav.html
+++ b/_includes/2-nav.html
@@ -24,6 +24,9 @@
                     <a class="page-scroll nav-center" href="{% if page.permalink == "/map/" %}{%else%}/map{%endif%}">Map</a>
                 </li>
                 <li>
+                    <a class="page-scroll nav-center" href="/blog/">News</a>
+                </li>
+                <li>
                     <a class="text-muted nav-center" href="/resources">Resources</a>
                 </li>
                 <!--li>
