--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,7 +53,9 @@ $theme-secondary: #1A3319 ;/*#001707 1b7837*/
 $theme-dark: #222;
 $font-primary: 'Catamaran';
 $font-secondary: 'Muli';
-$p-line-height: 2rem;
+$p-line-height: 1.3;
+$p-font-size: 20px;
+$h3-size: 30px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
@@ -61,6 +63,42 @@ $p-line-height: 2rem;
   "base"
 ;
 /*custom*/
+p img {
+  max-width:100%;
+}
+a:hover, a:focus {
+  color: #1A3319;
+  text-decoration: none;
+}
+/* css for news, archive and blog pages */
+.content em {
+  color:rgb(224,224,224);
+  font-size:1.2rem;
+}
+section.post {
+  padding:20px 0;
+}
+.post-list img {
+  float:left;
+  padding-right:20px;
+  width:200px;
+}
+.post-list-sm img {
+  float:left;
+  padding-right:20px;
+  width:130px;
+}
+.content hr {
+  width: 100%;
+  max-width: 100%;
+}
+
+@media screen and (min-width:1100px) {
+  .content.post.container {
+    width:1000px;
+  }
+}
+/* end blog css */
 /*custom carousel*/
 .carousel {
   max-width: 640px;
