--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,7 +53,7 @@ $theme-secondary: #1A3319 ;/*#001707 1b7837*/
 $theme-dark: #222;
 $font-primary: 'Catamaran';
 $font-secondary: 'Muli';
-$p-line-height: 1.3;
+$p-line-height: 1.4;
 $p-font-size: 20px;
 $h3-size: 30px;
 
@@ -63,20 +63,30 @@ $h3-size: 30px;
   "base"
 ;
 /*custom*/
+.sharelinks a:hover, .sharelinks a:focus {
+  color:#7fbf7b
+}
+.sharelinks a {
+  color:white;
+}
+.sharelinks {
+  margin-top:20px;
+}
 blockquote {
   border-left: 5px solid lightgray;
   background: whitesmoke;
+  color: rgba(51, 51, 51, 0.75);
 }
 p img {
   max-width:100%;
 }
 a:hover, a:focus {
   color: #1A3319;
-  text-decoration: none;
+  text-decoration: underline;
 }
 /* css for news, archive and blog pages */
 .content em {
-  color:rgb(224,224,224);
+  color:rgba(51, 51, 51, 0.80);
   font-size:1.2rem;
 }
 section.post {
@@ -154,11 +164,11 @@ header .header-content .header-content-inner {
   transform: translateY(-50%);
 }
 .page {
-  min-height: 260px;
-  height: 260px;
+  min-height: 300px;;
+  height: 300px;;
 }
 .page .header-content {
-    height: 260px;
+    height: 300px;;
 }
 /*end header*/
 /*sidebar list*/
