added future trails and fixed images

--- a/_includes/10.5-map-help-modal.html
+++ b/_includes/10.5-map-help-modal.html
@@ -9,25 +9,25 @@
       </div>
       <div class="modal-body">
         <p>
-          This map displays bikeways, hiking trails and parks archived at Southern Ohio Trails. To find more information about a trail, click on the trail or map key number. Points of interest can be added using the <i class="fa fa-star-o fa-lg"></i> Star icon, and a trail list can be found using the <i class="fa fa-th-list fa-lg"></i> List button. All points of interest have links to Google Maps directions from your current location.
+          This map displays bikeways, hiking trails and parks archived at Southern Ohio Trails. To find more information about a trail, click on the trail or map key number. Points of interest can be added using the <i class="fa fa-star-o fa-lg"></i>          Star icon, and a trail list can be found using the <i class="fa fa-th-list fa-lg"></i> List button. All points of interest have links to Google Maps directions from your current location.
         </p>
-        <div class="panel-group">
-          <div class="panel panel-default">
-            <div class="panel-heading" data-toggle="collapse" href="#collapse2" style="padding: 5px 10px;cursor:pointer;">
-              <h4 class="panel-title">
-                <a><h4 style="text-align:center">Map Controls & POI Legend</h4></a>
-              </h4>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="map-legend">
+              <i class="fa fa-minus fa-lg" style="color:green;"></i><span>Bikeways</span><br>
+              <i class="fa fa-minus fa-lg" style="color:#936c39;"></i><span>Hiking Trails</span><br>
+              <i class="fa fa-minus fa-lg" style="color:steelblue;"></i><span>Buckeye Trail</span><br>
+              <i class="fa fa-ellipsis-h fa-lg" style="color:darkseagreen;"></i><span>Proposed Bikeway</span><br>
+              <i class="fa fa-ellipsis-h fa-lg" style="color:goldenrod;"></i><span>Proposed Bike Route</span><br>
+              <i class="fa fa-minus fa-lg" style="color:firebrick;"></i><span>Designated Bike Route</span>
             </div>
-            <div id="collapse2" class="panel-collapse collapse">
-              <div class="list-group">
-                <span class="list-group-item"><i class="fa fa-star-o fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Toggle Points of Interest</span>
-                <span class="list-group-item"><i class="fa fa-th-list fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Toggle Trail List</span>
-                <span class="list-group-item"><i class="fa fa-filter fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Toggle Trail Filter</span>
-                <span class="list-group-item"><i class="fa fa-location-arrow fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Zoom To/Follow GPS Location</span>
-                <span class="list-group-item"><i class="fa fa-question-circle fa-lg fa-fw" aria-hidden="true"></i>&nbsp; Help</span>
-              </div>
-              <div class="panel-footer"></div>
-            </div>
+          </div>
+          <div class="col-sm-6 map-legend">
+            <i class="fa fa-star-o fa-lg" aria-hidden="true"></i>&nbsp; Toggle Points of Interest</span><br>
+            <i class="fa fa-th-list fa-lg" aria-hidden="true"></i>&nbsp; Toggle Trail List</span><br>
+            <i class="fa fa-filter fa-lg" aria-hidden="true"></i>&nbsp; Toggle Trail Filter</span><br>
+            <i class="fa fa-location-arrow fa-lg" aria-hidden="true"></i>&nbsp; Zoom To/Follow GPS Location</span><br>
+            <i class="fa fa-question-circle fa-lg" aria-hidden="true"></i>&nbsp; Help</span>
           </div>
         </div>
         <br>
